# hillel

./: pyproject.toml  task_1_import.txt
.circleci/: config.yml
hillel/lesson_2_hw_1/: __init__.py  task_2_math.py  task_3_greeting.py
lesson_2_hw_1/: task_2_math.py  task_4_rate.py  task_5_art.py
